# rp2350-secure-boot-chain

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bootloader_public_key.pem  documentation.md  firmware_public_key.pem  otp.json  proj_build.sh  todo.txt
bootloader/: CMakeLists.txt  Makefile  README.md  boot_utils.c  boot_utils.h  bootloader.ld  bootloader.uf2  crt0.S  embedded_end_block.S  embedded_start_block.S  main.c  mem.c  mem.h  syscalls.c
firmware/: CMakeLists.txt  firmware.ld  firmware_a.ld  firmware_b.ld  main.c
firmware/modules/: flash_layout.h  lwipopts.h  modules.h  network.c  wifi.c
http_server/: main.rb  versions.json
stupid_http_server/: main.rb
tools/: build_header.py  check_sign_firmware.py  extract_firmware_size.py  flash_pico.py  merge_uf2.py  reset_metadata.sh  sign_firmware.py
